--- a/odin-recipes/pizza.html
+++ b/odin-recipes/pizza.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./odin-recipes/pizza.html">Pizza</a>
+    <h1>Pizza</h1>
 </body>
 </html>
