Iteration 3: recipe page content Addition of multiple headings, description, image, unordered list, and ordered list.

--- a/odin-recipes/pizza.html
+++ b/odin-recipes/pizza.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tomato Basil Pizza</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1>Tomato Basil Pizza</h1>
+    <img src="./img/Pizza.webp" alt="tomato basil pizza">
+    <p>Tomato basil pizza is a great option for a healthy, yet savory dish. This pizza is made up of a hearty base layer of crust, 
+        topped with some delightful ingredients that will leave you wanting more.
+    </p>
+    <h2>Ingredients</h2>
+    <uo>
+        <li>Pizza crust</li>
+        <li>Tomato sauce</li>
+        <li>Cheese</li>
+        <li>Sliced grape tomatoes</li>
+        <li>Chopped basil leaves</li>
+    </uo>
+    <h2>Steps</h2>
+    <ol>
+        <li>First, start by preheating your oven to 425 degrees.</li>
+        <li>Next, begin applying an even layer of sauce to your crust.</li>
+        <li>After that, sprinkle a light layer of cheese on top.</li>
+        <li>You can now top the pizza with your prepped tomatoes and basil leaves.</li>
+        <li>Toss your pizza in the oven and cook for 15 - 20 minutes.</li>
+        <li>Let the pizza cool, then serve.</li>
+    </ol>
 </body>
 </html>
