Iteration 4: add more recipes Like my previous commit, I added 2 new recipes and linked then to my main index.html file.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./odin-recipes/pizza.html">Tomato Basil Pizza</a>
+<ul>
+    <li><a href="./odin-recipes/pizza.html" target="_blank" rel="noopener noreferrer">Tomato Basil Pizza</a></li>
+    <li><a href="./odin-recipes/Spaghetti.html" target="_blank" rel="noopener noreferrer">Spaghetti</a></li>
+    <li><a href="./odin-recipes/cheeseburger.html" target="_blank" rel="noopener noreferrer">Cheeseburger</a></li>
+</ul>
+
 </body>
 </html>
