--- a/odin-recipes/pizza.html
+++ b/odin-recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tomato Basil Pizza</h1>
-    <img src="./img/Pizza.webp" alt="tomato basil pizza">
+    <img src="./img/Pizza.webp" alt="tomato basil pizza" width="400">
     <p>Tomato basil pizza is a great option for a healthy, yet savory dish. This pizza is made up of a hearty base layer of crust, 
         topped with some delightful ingredients that will leave you wanting more.
     </p>
@@ -26,7 +26,7 @@
         <li>After that, sprinkle a light layer of cheese on top.</li>
         <li>You can now top the pizza with your prepped tomatoes and basil leaves.</li>
         <li>Toss your pizza in the oven and cook for 15 - 20 minutes.</li>
-        <li>Let the pizza cool, then serve.</li>
+        <li>Let the pizza cool, then serve!</li>
     </ol>
 </body>
 </html>
