--- a/odin-recipes/Spaghetti.html
+++ b/odin-recipes/Spaghetti.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Spaghetti</h1>
     <img src="./img/spaghetti.jpeg" alt="spaghetti" length="200" width="400">
-    <p>Spaghetti is a filling and cost effecient meal. Not only that, but it taste great! It's easy to make and can be enjoyed by the whole family!
+    <p>Spaghetti is a filling and cost effecient meal. Not only that, but it tastes great! It's easy to make and can be enjoyed by the whole family!
     </p>
     <h2>Ingredients</h2>
     <uo>
